--- a/app/src/main/res/layout/chat_home.xml
+++ b/app/src/main/res/layout/chat_home.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ChatFragment"
     android:orientation="vertical"
-    android:background="@drawable/chathome">
+    android:background="@drawable/bg_choose">
 <androidx.cardview.widget.CardView
 
     android:layout_marginTop="50dp"
