--- a/app/src/main/res/layout/display_users.xml
+++ b/app/src/main/res/layout/display_users.xml
@@ -28,27 +28,15 @@
                 android:id="@+id/all_users_profile_full_name"
                 android:layout_width="190dp"
                 android:layout_height="wrap_content"
-                android:text="user full name"
                 android:textAlignment="textStart"
-                android:textColor="@android:color/background_light"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
-            <ImageView
-                android:id="@+id/all_user_online_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/online"/>
+
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/all_users_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="status"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/background_light"
-            android:textSize="16sp" />
+
 
     </LinearLayout>
 
