--- a/app/src/main/res/layout/explore_home.xml
+++ b/app/src/main/res/layout/explore_home.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/inputs"
             android:ems="10"
-            android:hint="Search here... "
+            android:hint="Look up other users"
             android:inputType="textMultiLine"
             android:padding="10dp"/>
 
@@ -26,7 +26,7 @@
             android:layout_height="70dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/search_box_input"
-            android:background="@drawable/inputs"
+            android:background="@color/transparent"
             android:src="@drawable/explore"/>
 
     <androidx.recyclerview.widget.RecyclerView
