--- a/app/src/main/res/layout/register_next.xml
+++ b/app/src/main/res/layout/register_next.xml
@@ -1,85 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    tools:context=".RegisterNext"
+    >
+<androidx.appcompat.widget.Toolbar
+    android:id="@+id/bgHeader"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RegisterNext">
+    android:layout_height="100dp"
+    android:background="@drawable/header_register"
+    android:elevation="1dp" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/setup_profile_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/profile" />
+<TextView
+    android:id="@+id/tvSignUp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="40dp"
+    android:elevation="10dp"
+    android:transitionName="tvLogin"
+    android:text="Sign up"
+    android:textColor="@color/white"
+    android:textSize="20sp"
+    android:textStyle="bold" />
+<ImageView
+    android:id="@+id/circle1"
+    android:layout_width="134dp"
+    android:layout_height="134dp"
+    android:layout_marginLeft="-25dp"
+    android:layout_marginTop="-5dp"
+    android:src="@drawable/circletrasparant" />
 
-    <EditText
-        android:id="@+id/setup_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="261dp"
-        android:layout_marginRight="7dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/inputs"
-        android:drawableLeft="@drawable/username"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="textMultiLine"
-        android:padding="14dp" />
+<ImageView
+    android:id="@+id/circle3"
+    android:layout_width="182dp"
+    android:layout_height="182dp"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginLeft="-80dp"
+    android:layout_marginBottom="-30dp"
+    android:src="@drawable/circle" />
 
-    <EditText
-        android:id="@+id/setup_full_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="323dp"
-        android:layout_marginRight="7dp"
-        android:background="@drawable/inputs"
-        android:layout_centerHorizontal="true"
-        android:drawableLeft="@drawable/name"
-        android:ems="10"
-        android:hint="Full name"
-        android:inputType="textMultiLine"
-        android:padding="14dp" />
 
-    <EditText
-        android:id="@+id/setup_country_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/setup_full_name"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="7dp"
-        android:background="@drawable/inputs"
-        android:layout_centerHorizontal="true"
-        android:drawableLeft="@drawable/country"
-        android:ems="10"
-        android:hint="Country"
-        android:inputType="textMultiLine"
-        android:padding="14dp" />
+
+<RelativeLayout
+    android:id="@+id/rlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
+        android:layout_width="325dp"
+        android:layout_height="477dp"
+        android:layout_centerInParent="true"
+        android:elevation="5dp"
+        app:cardCornerRadius="10dp">
+
+        <LinearLayout
+            android:layout_width="318dp"
+            android:layout_height="475dp"
+            android:orientation="vertical"
+            android:paddingBottom="50dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/setup_profile_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="80dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/profile" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:inputType="textMultiLine"
+                android:text="Username"
+                android:textColor="@color/colorPurple"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/setup_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Name"
+                android:textColor="@color/colorPurple"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/setup_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="textMultiLine" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Country"
+                android:textColor="@color/colorPurple"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/setup_country_name"
+                android:layout_width="296dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="text" />
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioGroup"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/female"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Female" />
+
+                <RadioButton
+                    android:id="@+id/male"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Male" />
+
+            </RadioGroup>
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/setup_information_button"
-        android:layout_width="265dp"
-        android:layout_height="59dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="453dp"
-        android:background="@drawable/button"
-        android:padding="14dp"
-        android:text="Save"
-        android:textColor="@android:color/background_light"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
+        android:layout_width="254dp"
+        android:layout_height="51dp"
+        android:layout_below="@+id/cv"
+        android:layout_alignStart="@+id/cv"
+        android:layout_alignEnd="@+id/cv"
+        android:layout_alignBottom="@+id/cv"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="-86dp"
+        android:text="Sign up"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:backgroundTint="#FF9800" />
+</RelativeLayout>
 </RelativeLayout>
