--- a/app/src/main/res/layout/display_users.xml
+++ b/app/src/main/res/layout/display_users.xml
@@ -31,11 +31,22 @@
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginLeft="5dp"/>
+
 
 
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/all_users_profile_age"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/abeezee"
+            android:layout_marginLeft="10dp"/>
 
 
     </LinearLayout>
