--- a/app/src/main/res/layout/activity_health.xml
+++ b/app/src/main/res/layout/activity_health.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_choose"
-    tools:context=".Health"
+    tools:context=".match.Health"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
