--- a/app/src/main/res/layout/activity_lonely_user.xml
+++ b/app/src/main/res/layout/activity_lonely_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LonelyUser"
+    tools:context=".match.LonelyUser"
     android:background="@drawable/lonely_bgg"
     android:orientation="vertical">
     <TextView
