--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/matchback"
-    tools:context=".Match"
+    tools:context=".match.Match"
     android:orientation="vertical">
 
     <TextView
