--- a/app/src/main/res/layout/chat_home.xml
+++ b/app/src/main/res/layout/chat_home.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ChatFragment"
+    tools:context=".chat.ChatFragment"
     android:orientation="vertical"
     android:background="@drawable/bg_choose">
 <androidx.cardview.widget.CardView
