--- a/app/src/main/res/layout/choose_language.xml
+++ b/app/src/main/res/layout/choose_language.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/bg_choose"
-    tools:context=".languages">
+    tools:context=".match.languages">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
