--- a/app/src/main/res/layout/explore_home.xml
+++ b/app/src/main/res/layout/explore_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExploreFragment">
+    tools:context=".explore.ExploreFragment">
 
         <EditText
             android:id="@+id/search_box_input"
