--- a/app/src/main/res/layout/myposts.xml
+++ b/app/src/main/res/layout/myposts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyPosts">
+    tools:context=".post.MyPosts">
 
 
     <androidx.recyclerview.widget.RecyclerView
