--- a/app/src/main/res/layout/skills.xml
+++ b/app/src/main/res/layout/skills.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_choose"
     android:orientation="vertical"
-    tools:context=".Skills">
+    tools:context=".match.Skills">
     <TextView
         android:id="@+id/chooseTv"
         android:padding="10dp"
